syntax = "proto3";

option go_package = "github.com/woodhds/vk.service/protos";

service MessageSaveService {
  rpc SaveMessage(MessageSaveRequest) returns(MessageSaveResponse);
}

message MessageSaveRequest {
  int32 owner_id = 1;
  int32 id = 2;
  string category = 3;
  string text = 4;
}

message MessageSaveResponse {
  bool success = 1;
}